sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (nain=0){nain+=1}
          ^AlgGnomeSort:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if(nain=getNombreValeurs()-1){return}
         ^