sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var nain=0
  if (nain=0){nain+=1}
  if(nain=getNombreValeurs()-1){return}
  if (plusPetit(nain,nain-1)){
    echange(nain,nain-1)
    nain-=1
  }else {nain+=1}
}